tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/bad-uni-esc-5.stderr
TOML parse error at line 1, column 23
  |
1 | bad-uni-esc-5 = "val\Ugggggggg"
  |                       ^
invalid unicode 8-digit hex code
